--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Gif To Atlas Converter</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" />
@@ -67,7 +68,5 @@
 	<script type="text/javascript" src="js/jquery-ui.js"></script>
 	<script type="text/javascript" src="js/jquery.ui.touch-punch.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
-	
-	
 </body>
 </html>
